--- a/roles/catalogue/tasks/main.yaml
+++ b/roles/catalogue/tasks/main.yaml
@@ -12,3 +12,18 @@
   ansible.builtin.import_role:
     name: common
     tasks_from: app-setup
+
+- name: Install Dependencies
+  ansible.builtin.command: npm install
+  args:
+    chdir: /app
+
+- name: Load Schema 
+  ansible.builtin.import_role:
+    name: common
+    tasks_from: load-mongo-schema
+
+- name: Systemd Setup 
+  ansible.builtin.import_role:
+    name: common
+    tasks_from: systemd-setup
