--- a/roles/common/tasks/app-setup.yaml
+++ b/roles/common/tasks/app-setup.yaml
@@ -29,7 +29,7 @@
     url: https://roboshop-builds.s3.amazonaws.com/{{component}}.zip
     dest: /tmp
 
-- name: Extract Catalogue artifact
+- name: Extract {{component}} artifact
   ansible.builtin.unarchive:
     src: /tmp/{{component}}.zip
     dest: /app
